--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,8 +1,8 @@
 body{
-    background-color: lightskyblue;
+    background-color: rgb(255, 255, 255);
 }
 .col{
-    background-color: white;
+    background-color: rgb(185, 23, 145);
 }
 .container{
     margin-top:20px;
